fix product spacing

--- a/styles/product.scss
+++ b/styles/product.scss
@@ -2,7 +2,7 @@
 
 .yc-single-product {
   display: flex;
-  gap: 5vh;
+  gap: 8px;
   margin: 25px auto;
   flex-direction: column;
   align-items: start;
@@ -128,14 +128,14 @@
     max-width: 90vw;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 19px;
     overflow: hidden;
-    padding: 10px;
+    padding: 0 12px;
 
     .product-name {
+      font-weight: 700;
       font-size: 25px;
-      font-weight: 600;
-      margin-bottom: 25px;
+      line-height: 120%;
     }
     .product-options {
       .product-option {
